# ETL_CASE

./: .gitignore  clean.py  extrair.py  pyproject.toml  steam_sales.csv
