[tool.poetry]
name = "etl-case"
version = "0.1.0"
description = ""
authors = ["Jeff <jeffersonpereira138@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.26.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
